@@ -1,5 +1,5 @@
-DIST gimp-lqr-plugin-0.4.0-4.tar.gz 824386 RMD160 674b0dc8fe2280f766f55543edc620c852edcacc SHA1 7cec6270d9eac8fb2e599a5b095c022475c51268 SHA256 ed6b736c557354c2f9f7a948a2a23bc936d238d9303c462859118e7a9813b943
 DIST gimp-lqr-plugin-0.5.0.tar.bz2 1232212 RMD160 24eb242962a6b443d1fa52ad882f66621f3856da SHA1 7da549c36e9ccfce924012ee3a8f88d55e7c415f SHA256 f22908e34b25c7f0a9707b2bb11d22739db21d69fd3e2f6f03c8c6fbb0dfb289
-EBUILD gimp-lqr-plugin-0.4.0.4.ebuild 672 RMD160 5a620ac0e93a5ec238a389cfc60bca2e771e1bda SHA1 bb5a7cb3b8db1528a97c1ddcfe5085ff34d6614c SHA256 ea79bf7b3c76a2880ddc1b429d5ea453e01501895dbe31283b937ad3f97b052c
-EBUILD gimp-lqr-plugin-0.5.0.ebuild 565 RMD160 32ecc7b2d80f51ba33b357a9de4d989f8ec88516 SHA1 b5992914318503fa3991746e53d9bd6fadea994f SHA256 a6bfb156d9858eb3b6fb6193734cccfa685b0af4542aafce8031dd143eb169ad
+DIST gimp-lqr-plugin-0.5.1.tar.bz2 642671 RMD160 d6d85000da69fa1f50fc336acb8490234ea7b68f SHA1 7ed5c0c9402634e7c59df11216d0b7a17bca582f SHA256 91556f6e809fefd93673263b5ba844ccceb86aa309351b2f5ff20a9daae12bab
+EBUILD gimp-lqr-plugin-0.5.0.ebuild 565 RMD160 55e9602f9b402fb0c946e589ae2dd894e8a1eee1 SHA1 9d18e3116624bd58128662751921266fece80736 SHA256 475efc781b4c8fc7aeb434f781a91b3f8729f4688cdb7c286d9b3b6dd4c59d01
+EBUILD gimp-lqr-plugin-0.5.1.ebuild 565 RMD160 55e9602f9b402fb0c946e589ae2dd894e8a1eee1 SHA1 9d18e3116624bd58128662751921266fece80736 SHA256 475efc781b4c8fc7aeb434f781a91b3f8729f4688cdb7c286d9b3b6dd4c59d01
 MISC ChangeLog 1781 RMD160 8aa8f412f99fe92ca5e3aa7d402a22f6b6b1aa22 SHA1 4fc5173c4d701fd3d1d3d747a4ded2f035665ce5 SHA256 fe853c6a23527297813f2b6d874ff35da2ac55a9b86bb0138c483de0d5cade72
