@@ -2,6 +2,11 @@
 # Copyright 2007-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Nov 2008; Piotr Szymaniak <lazy_bum@o2.pl>
+  -gimp-lqr-plugin-0.4.0.4.ebuild, gimp-lqr-plugin-0.5.0.ebuild,
+  +gimp-lqr-plugin-0.5.1.ebuild:
+  Bugfix bump, removed cruft, fixed depends.
+
   21 Oct 2008; Piotr Szymaniak <lazy_bum@o2.pl>
   +gimp-lqr-plugin-0.5.0.ebuild:
   Version bump.
